--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,7 @@ html
     title
       | Emerchantpay
     meta[name="viewport" content="width=device-width,initial-scale=1"]
+    = link_to "sign out", destroy_user_session_path, data: { "turbo-method": :delete }
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
