--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,10 +4,13 @@ html
     title
       | Emerchantpay
     meta[name="viewport" content="width=device-width,initial-scale=1"]
-    = link_to "sign out", destroy_user_session_path, data: { "turbo-method": :delete }
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   body
-    = yield
+    link[href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"]
+    .container
+      | #{current_user.name}
+      = button_to "sign out", destroy_user_session_path, method: :delete
+      = yield
