--- a/app/views/transactions/_transaction.html.slim
+++ b/app/views/transactions/_transaction.html.slim
@@ -1,4 +1,16 @@
 div id="#{dom_id transaction}"
   p
-    strong Name:
-    = transaction.name
+    strong Type:
+    = transaction.type
+  p
+    strong uuid:
+    = transaction.uuid
+  p
+    strong Amount:
+    = transaction.amount
+  p
+    strong Customer Email:
+    = transaction.customer_email
+  p
+    strong Customer Phone:
+    = transaction.customer_phone
