--- a/app/views/admins/merchants/_merchant.html.slim
+++ b/app/views/admins/merchants/_merchant.html.slim
@@ -1,4 +1,24 @@
-div id="#{dom_id merchant}"
-  p
-    strong Name:
+tr
+  td.text-nowrap.align-middle
     = merchant.name
+  td.text-nowrap.align-middle
+    span
+      = merchant.description
+  td.text-nowrap.align-middle
+    span
+      = merchant.status
+  td.text-nowrap.align-middle
+    span
+      = merchant.email
+  td.text-nowrap.align-middle
+    span
+      = merchant.total_transaction_sum
+  td.text-nowrap.align-middle
+    span
+      = link_to 'view transactions', merchant_transactions_path(merchant)
+  td.text-center.align-middle
+    .btn-group.align-top
+      button[type="button" data-toggle="modal" data-target="#user-form-modal"]
+        = link_to 'Edit', edit_merchant_path(merchant)
+      = button_to merchant, method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } do
+        i.fa.fa-trash
