--- a/app/views/admins/merchants/edit.html.slim
+++ b/app/views/admins/merchants/edit.html.slim
@@ -1,7 +1,5 @@
 h1 Editing merchant
 = render "form", merchant: @merchant
-br/
+br
 div
-  = link_to "Show this merchant", @merchant
-  | \
-  | \#{link_to "Back to merchants", merchants_path}
+  = link_to "Back to merchants", merchants_path
