--- a/app/views/admins/merchants/_form.html.slim
+++ b/app/views/admins/merchants/_form.html.slim
@@ -8,6 +8,8 @@
         - merchant.errors.each do |error|
           li= error.full_message
   div
+    = form.label :email, style: "display: block"
+    = form.text_field :email
     = form.label :name, style: "display: block"
     = form.text_field :name
     = form.label :description, style: "display: block"
