--- a/app/views/admins/merchants/_form.html.slim
+++ b/app/views/admins/merchants/_form.html.slim
@@ -2,8 +2,7 @@
   - if merchant.errors.any?
     div style="color: red"
       h2
-        = pluralize(merchant.errors.count, "error")
-        prohibited this merchant from being saved:
+        = "#{pluralize(merchant.errors.count, "error")} prohibited this merchant from being saved:"
       ul
         - merchant.errors.each do |error|
           li= error.full_message
